--- a/CSS/feed.css
+++ b/CSS/feed.css
@@ -14,6 +14,7 @@ Fonte: https://rsms.me/inter/
 }
 
 body {
+	overflow-x: hidden;
 	margin: 0;
 	height: 100%;
 	background-color: #222222;
@@ -24,6 +25,8 @@ body {
 	display: flex;
 	align-items: flex-start;
 	margin-top: 1%;
+	position: fixed;
+	z-index: 1;
 }
 
 #search-bar {
@@ -50,7 +53,7 @@ body {
 #logo {
 	width: 100%;
 	max-width: 70px;
-	margin-left: 2%;
+	margin-left: 5%;
 	cursor: pointer;
 }
 
@@ -58,14 +61,14 @@ body {
 	position: relative;
 	margin-right: 2%;
 	top: 1vh;
-	left: 33%;
+	left: 57%;
 }
 
 #self-label {
 	color: #F4F4F4;
 	font-size: 20px;
 	position: relative;
-	left: 32%;
+	left: 55%;
 	top: 2.5vh;
 	cursor: pointer;
 }
@@ -77,6 +80,8 @@ body {
 	color: #FFFFFF;
 	display: flex;
 	flex-direction: column;
+	position: fixed;
+	z-index: 1;
 }
 
 .sidebar-icon {
@@ -85,14 +90,15 @@ body {
 	max-width: 40px;
 	margin-right: 10px;
 	position: relative;
-	bottom: 3vh;
+	top: 6vh;
+	left: 15%;
 }
 
 .sidebar-label {
 	cursor: pointer;
 	position: relative;
-	left: 3%;
-	top: 0.5vh;
+	left: 55%;
+	top: 9.5vh;
 }
 
 .profile-picture {
@@ -105,6 +111,11 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
+	float: right;
+	position: fixed;
+	bottom: 46vh;
+	right: 4%;
+	z-index: 1;
 }
 
 #people-you-might-know-text {
@@ -117,10 +128,80 @@ body {
 	color: #FFFFFF;
 	font-size: 20px;
 	cursor: pointer;
+	position: relative;
+	left: 21%;
+	top: 1vh;
 }
 
 .add-user-label {
 	color: #22A2F2;
 	font-size: 16px;
 	cursor: pointer;
+	position: relative;
+	left: 83%;
+	bottom: 1.5vh;
+}
+
+.know-user {
+	position: relative;
+	bottom: 5vh;
+	margin-bottom: -10%;
+}
+
+.post-box {
+	display: flex;
+	flex-wrap: wrap;
+	border: 1px solid #4C5C68;
+	box-sizing: border-box;
+	padding: 10px;
+	max-width: 40%;
+	position: relative;
+	top: 15.5vh;
+	left: 25%;
+	padding: 1.5vh 1.5vw;
+}
+
+#input-box {
+	font-family: Inter;
+	color: #F2F2F2;
+	font-size: 15px;
+	text-align: left;
+	background-color: #222222;
+	border: none;
+	width: 100%;
+	margin-bottom: 7%;
+	height: 3vh;
+}
+
+.secondary-post-box {
+	flex-wrap: nowrap;
+}
+
+#input-box::placeholder {
+	color: #F2F2F2;
+	opacity: 1;
+}
+
+.post-box-icon {
+	height: 100%;
+	max-height: 25px;
+	padding-right: 6px;
+	cursor: pointer;
+	align-items: flex-start;
+}
+
+.button {
+	font-weight: 600;
+	box-sizing: border-box;
+	width: 5vw;
+	height: 4.5vh;
+	border: none;
+	cursor: pointer;
+	font-size: 12px;
+	background-color: #1985A1;
+	color: black;
+	border-radius: 10px;
+	position: relative;
+	bottom: 1vh;
+	left: 73%;
 }
